10/24/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Updated how the splash screen gets updated on startup to make it
      more active.

07/12/2005 Trish Hartnett <trishah136@users.sourceforge.net>
	* Updated javadoc for ProgresSplashScreenWindow
	
07/09/2005 Trish Hartnett <trishah136@users.sourceforge.net>
	* Added splash screen for jsXE startup
	* Changed format of Activity Log Dialog so that buttons were arranged neater.

07/02/2005  Trish Hartnett <trishah136@users.sourceforge.net>
	* Added Activity Log menu option to the Help menu
	* Edited jsXe so that when the DirtyFilesDialog appears, it's sized correctly

07/01/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Released version 0.4pre2

06/29/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Made some changes suggested by FindBugs.

06/28/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Modified the DirtyFilesDialog to make it look a little bit better.
        * Changed to use the BorderLayout better
        * Changed to allow the JList to size itself correctly
        * Changed from using 3 JPanels to using 1 and using the BorderLayout to
          arrange the components
        * Changed from using a JPanel to format the buttons to using a Box which
          arranges the buttons closer to the way you want.
    * Dirty files dialog doesn't show if there is only one dirty file.
    * If you select all files in the dirty files dialog then choose save
      selected and then cancel any save the dialog will no longer close. It will
      remain open to prompt with what to do with the files you cancelled.
    * Added some tooltip messages to the jsXe options menu and XML Document
      options menu.
    
06/27/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Removed some NOTICES to the log in the DirtyFilesDialog since they aren't
      necessary.
    * Added some new NOTICEs to the Log

06/21/2005  Ian Lewis   <IanLewis@member.fsf.org>
